kubernetes/deadend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stud-for-stud-frontend-deadend
  namespace: stud-for-stud-production
  labels:
    app: stud-for-stud-frontend-deadend
    environment: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stud-for-stud-frontend-deadend
  template:
    metadata:
      labels:
        app: stud-for-stud-frontend-deadend
        environment: production
    spec:
      containers:
        - name: stud-for-stud-frontend-deadend
          image: harbor.chay-techs.com/deadend/fron:1.0.1
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: stud-for-stud-registry-key
