kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stud-for-stud-frontend
  namespace: stud-for-stud-production
  labels:
    app: stud-for-stud-frontend
    environment: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stud-for-stud-frontend
  template:
    metadata:
      labels:
        app: stud-for-stud-frontend
        environment: production
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000  
      containers:
        - name: stud-for-stud-frontend
          image: harbor.chay-techs.com/studforstud/studforstud-app:1.3.3
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: nfs-pv-storage
              mountPath: "/nfs"
      imagePullSecrets:
        - name: stud-for-stud-registry-key
      volumes:
        - name: nfs-pv-storage
          persistentVolumeClaim:
            claimName: nfs-pvc
