kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stud-for-stud-ingress
  namespace: stud-for-stud-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/client-max-body-size: "0m"
    
spec:
  tls:
  - hosts:
    - studforstud.chay-techs.com
    secretName: ingress-tls-ssl

  rules:
  - host: studforstud.chay-techs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stud-for-stud-frontend-service
            port:
              number: 5000
